--- a/About.html
+++ b/About.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="About.css">
 </head>
 <body>
-
   <header>
     <nav class="navbar">
         <div>
@@ -37,22 +36,52 @@
       </div>
 
       <div class="home-card">
-        <img src="house4.jpg" alt="South Indian Villa">
+        <img src="house2.jpg" alt="South Indian Villa">
         <h3>Elegant South Indian Villa – Kerala</h3>
         <p>Traditional charm meets modern design. This villa features intricate woodwork, open courtyards, and a serene garden space perfect for family living.</p>
       </div>
 
       <div class="home-card">
-        <img src="house2.jpg" alt="Mumbai Apartment">
+        <img src="house3.jpg" alt="Bangalore Penthouse">
+        <h3>Luxury Penthouse – Bangalore</h3>
+        <p>A sky-high residence with panoramic city views, rooftop lounge, and smart home automation for modern living.</p>
+      </div>
+
+      <div class="home-card">
+        <img src="house4.jpg" alt="Mumbai Apartment">
         <h3>Stylish Mumbai Apartment</h3>
         <p>A chic urban residence with minimalist interiors, smart storage solutions, and panoramic city views. Ideal for professionals seeking comfort and convenience.</p>
       </div>
 
       <div class="home-card">
-        <img src="house3.jpg" alt="Delhi Home">
+        <img src="house5.jpg" alt="Delhi Home">
         <h3>Contemporary Delhi Home</h3>
         <p>A bold design with geometric lines, vertical glazing, and warm textures. This home is a statement of style and functionality.</p>
       </div>
+
+      <div class="home-card">
+        <img src="house6.jpg" alt="Chennai Smart Home">
+        <h3>Smart Family Home – Chennai</h3>
+        <p>A modern family home equipped with smart technology, spacious living areas, and eco-friendly design features.</p>
+      </div>
+
+      <div class="home-card">
+        <img src="house7.jpg" alt="Goa Beach Villa">
+        <h3>Beachfront Villa – Goa</h3>
+        <p>Wake up to ocean views in this stunning villa. Featuring open terraces, modern interiors, and direct beach access.</p>
+      </div>
+
+      <div class="home-card">
+        <img src="house8.jpg" alt="Jaipur Heritage Home">
+        <h3>Heritage Mansion – Jaipur</h3>
+        <p>Experience royal living in this heritage-style mansion with ornate arches, courtyards, and traditional Rajasthani design.</p>
+      </div>
+
+      <div class="home-card">
+      <img src="house9.jpg" alt="Noida Smart Apartment">
+      <h3>Smart Apartment – Noida</h3>
+      <p>Equipped with smart technology, this apartment offers convenience, security, and modern urban living.</p>
+    </div>
     </div>
   </section>
 
@@ -62,7 +91,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Real Estate Company. All Rights Reserved.</p>
+    <p>&copy; 2025 Elite Circle Estate Company. All Rights Reserved.</p>
   </footer>
 
 </body>
