--- a/Contact.html
+++ b/Contact.html
@@ -59,5 +59,7 @@
             <button type="submit">Submit</button>
         </form>
     </footer>
+
+    <p id="bottom">&copy; 2025 Elite Circle Estate Company. All Rights Reserved.</p>
 </body>
 </html>
