--- a/About.html
+++ b/About.html
@@ -91,7 +91,9 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Elite Circle Estate Company. All Rights Reserved.</p>
+    <p>&copy; 2025 Elite Circle Estate Company. All Rights Reserved.<br>
+    Feel free to contact us in case of any queries:- <br>
+    +91 98765 43210</p>
   </footer>
 
 </body>
