--- a/index.html
+++ b/index.html
@@ -2,22 +2,163 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Header Example</title>
+  <title>Elite Circle Estate</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header>
     <nav class="navbar">
-        <div class="logo">
-            <img src="logo.jpeg" alt="Website Logo">
-        </div>
-        <div class="nav-links">
-            <a href="#">Home</a>
-            <a href="About.html">About</a>
-            <a href="Contact.html">Contact</a>
-        </div>
+      <div class="logo">
+        <img src="logo.jpeg" alt="Website Logo">
+      </div>
+      <div class="nav-links">
+        <a href="about.html">About Us</a></li>
+        <a href="properties.html">Properties</a></li>
+        <a href="services.html">Services</a></li>
+        <a href="contact.html">Contact</a></li>
+      </div>
     </nav>
   </header>
+
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Welcome to Elite Circle Estate</h1>
+      <h2>Looking To Buy or Rent a Property? <br>
+        Find Your Dream Home With Us!</h2>
+    </div>
+  </section>
+
+
+  <section class="featured">
+    <h2>Featured Properties</h2>
+    <div class="cards">
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1568605114967-8130f3a36994" alt="Modern Luxury Home">
+        <div class="card-content">
+          <h3>Modern Luxury Home</h3>
+          <p>
+            This elegant 4 BHK designer villa is crafted with contemporary architecture, 
+            high ceilings, and floor-to-ceiling glass walls. The interior features open-plan 
+            living spaces, a chef’s kitchen with the latest appliances, and a private landscaped garden.
+          </p>
+          <ul>
+            <li><strong>Bedrooms:</strong> 4</li>
+            <li><strong>Bathrooms:</strong> 4</li>
+            <li><strong>Area:</strong> ~3,800 sq ft</li>
+            <li><strong>Highlights:</strong> Infinity pool, Smart Home Automation, Green Roof</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1572120360610-d971b9d7767c" alt="Luxury Villa">
+        <div class="card-content">
+          <h3>Luxury Garden Villa</h3>
+          <p>
+            A serene villa designed for privacy and relaxation. Surrounded by lush gardens, 
+            this property features a sun-drenched terrace, elegant lounge area, and high-end 
+            finishes. The large windows bring natural light throughout the home.
+          </p>
+          <ul>
+            <li><strong>Bedrooms:</strong> 5</li>
+            <li><strong>Bathrooms:</strong> 5</li>
+            <li><strong>Area:</strong> ~5,500 sq ft</li>
+            <li><strong>Highlights:</strong> Private Pool, Outdoor Pavilion, Designer Landscapes</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914" alt="City Apartment">
+        <div class="card-content">
+          <h3>City-View Apartment</h3>
+          <p>
+            A premium 3-bedroom apartment located in a high-rise in a prestigious neighborhood. 
+            Features include a panoramic balcony, modern interiors, and premium community amenities like gym and lounge.
+          </p>
+          <ul>
+            <li><strong>Bedrooms:</strong> 3</li>
+            <li><strong>Bathrooms:</strong> 3</li>
+            <li><strong>Area:</strong> ~2,200 sq ft</li>
+            <li><strong>Highlights:</strong> Concierge, Rooftop Deck, Secure Parking</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Luxury Condo">
+        <div class="card-content">
+          <h3>Luxury Condo</h3>
+          <p>
+            This modern condo offers 2 large bedrooms, a spacious living-dining area, and a sleek kitchen. 
+            Designed with minimalism in mind, it comes with access to a landscaped rooftop garden and a shared gym.
+          </p>
+          <ul>
+            <li><strong>Bedrooms:</strong> 2</li>
+            <li><strong>Bathrooms:</strong> 2</li>
+            <li><strong>Area:</strong> ~1,500 sq ft</li>
+            <li><strong>Highlights:</strong> Roof Garden, Smart Lighting, High-Speed Elevators</li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+  <section class="about-preview">
+    <div class="preview-text">
+      <h2>Why Choose Elite Circle Estate</h2>
+      <p>
+        At Elite Circle Estate, we specialize in high-end residential properties in prime locations.
+        With decades of experience and a deep understanding of South Delhi’s luxury real estate market, 
+        we provide proven expertise, personalized service, and transparency in every transaction.
+      </p>
+      <a href="about.html" class="btn">Learn More About Us</a>
+    </div>
+  </section>
+
+
+  <section class="services">
+    <h2>Our Services</h2>
+    <div class="service-cards">
+      <div class="service">
+        <h3>Buying & Selling</h3>
+        <p>Whether you're buying your dream home or selling a premium property, we handle everything professionally.</p>
+      </div>
+      <div class="service">
+        <h3>Leasing / Renting</h3>
+        <p>Find or list elite-grade properties for long-term rent or lease.</p>
+      </div>
+      <div class="service">
+        <h3>Investment Advisory</h3>
+        <p>Our expert team advises on real estate investments, high-value portfolios & future growth.</p>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="testimonials">
+    <h2>Client Testimonials</h2>
+    <div class="testi-cards">
+      <div class="testi">
+        <p>“Elite Circle Estate helped me buy a villa in a top locality. Their market knowledge and service were incredible.”</p>
+        <span>— R. Gupta, Home Buyer</span>
+      </div>
+      <div class="testi">
+        <p>“Their property investment advice was spot-on. I made a great return on my investment property.”</p>
+        <span>— S. Verma, Investor</span>
+      </div>
+    </div>
+  </section>
+
+
+  <footer class="footer">
+    <p>© 2025 Elite Circle Estate. All rights reserved.</p>
+    <p>Contact: +91 98183-12077 | info@royale-realty.com</p>
+  </footer>
+
 </body>
 </html>
