Add and Updated website pages,styles

--- a/About.html
+++ b/About.html
@@ -15,8 +15,10 @@
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="About.html">About</a>
+            <a href="About.html" class="active">About</a>
             <a href="Contact.html">Contact</a>
+            <a href="Services.html">Services</a>
+            <button id="theme-toggle">Dark Mode 🌙</button>
         </div>
     </nav>
   </header>
@@ -93,9 +95,9 @@
   <footer>
     <p>&copy; 2025 Elite Circle Estate Company. All Rights Reserved.<br>
     Feel free to contact us in case of any queries:- <br>
-    +91 98765 43210</p>
+    +91 98765 43210 , +91 91234 56789</p>
   </footer>
-
 </body>
+<script src="script.js"></script>
 </html>
  
