--- a/index.html
+++ b/index.html
@@ -6,70 +6,48 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header>
     <nav class="navbar">
       <div class="logo">
         <img src="logo.jpeg" alt="Website Logo">
       </div>
       <div class="nav-links">
-        <a href="about.html">About Us</a></li>
-        <a href="properties.html">Properties</a></li>
-        <a href="services.html">Services</a></li>
-        <a href="contact.html">Contact</a></li>
+        <a href="index.html" class="active">Home</a>
+        <a href="About.html">About</a>
+        <a href="Contact.html">Contact</a>
+        <a href="Services.html">Services</a>
       </div>
     </nav>
   </header>
-
   <section class="hero">
-    <div class="hero-content">
-      <h1>Welcome to Elite Circle Estate</h1>
-      <h2>Looking To Buy or Rent a Property? <br>
-        Find Your Dream Home With Us!</h2>
+  <div class="hero-content">
+    <h1>Luxury Homes in South Delhi</h1>
+    <h2>Elite Circle Estate - Exclusive villas, apartments and penthouses curated for you.</h2>
+    <div class="hero-actions">
+      <a href="Contact.html" class="btn primary-btn">Schedule a Call</a>
+      <a href="#featured" class="btn ghost-btn">View Featured Listings</a>
     </div>
-  </section>
+  </div>
+</section>
 
 
-  <section class="featured">
-    <h2>Featured Properties</h2>
-    <div class="cards">
-
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1568605114967-8130f3a36994" alt="Modern Luxury Home">
-        <div class="card-content">
-          <h3>Modern Luxury Home</h3>
-          <p>
-            This elegant 4 BHK designer villa is crafted with contemporary architecture, 
-            high ceilings, and floor-to-ceiling glass walls. The interior features open-plan 
-            living spaces, a chef’s kitchen with the latest appliances, and a private landscaped garden.
-          </p>
-          <ul>
-            <li><strong>Bedrooms:</strong> 4</li>
-            <li><strong>Bathrooms:</strong> 4</li>
-            <li><strong>Area:</strong> ~3,800 sq ft</li>
-            <li><strong>Highlights:</strong> Infinity pool, Smart Home Automation, Green Roof</li>
-          </ul>
-        </div>
+<section id="featured" class="featured">
+  <h2>Featured Luxury Properties</h2>
+  <div class="cards">
+    <article class="card">
+      <img src="house3.jpg" alt="villa in South Delhi">
+      <div class="card-content">
+        <h3>4 BHK Designer Villa</h3>
+        <ul class="card-meta">
+          <li>Location: South Delhi – Premium Enclave</li>
+          <li>Area: 6,200 sq.ft · 4 Bed · 5 Bath</li>
+          <li>Highlights: Open‑plan living, chef’s kitchen, private garden</li>
+        </ul>
+        <a href="Contact.html" class="btn primary-btn">Request Details</a>
       </div>
-
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1572120360610-d971b9d7767c" alt="Luxury Villa">
-        <div class="card-content">
-          <h3>Luxury Garden Villa</h3>
-          <p>
-            A serene villa designed for privacy and relaxation. Surrounded by lush gardens, 
-            this property features a sun-drenched terrace, elegant lounge area, and high-end 
-            finishes. The large windows bring natural light throughout the home.
-          </p>
-          <ul>
-            <li><strong>Bedrooms:</strong> 5</li>
-            <li><strong>Bathrooms:</strong> 5</li>
-            <li><strong>Area:</strong> ~5,500 sq ft</li>
-            <li><strong>Highlights:</strong> Private Pool, Outdoor Pavilion, Designer Landscapes</li>
-          </ul>
-        </div>
-      </div>
-
+    </article>
+  </div>
+</section>
       <div class="card">
         <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914" alt="City Apartment">
         <div class="card-content">
