Add houses in index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </div>
     </nav>
   </header>
+
   <section class="hero">
   <div class="hero-content">
     <h1>Luxury Homes in South Delhi</h1>
@@ -29,7 +30,6 @@
     </div>
   </div>
 </section>
-
 
 <section id="featured" class="featured">
   <h2>Featured Luxury Properties</h2>
@@ -82,9 +82,36 @@
         </div>
       </div>
 
+      <div class="card">
+        <img src="house7.jpg" alt="Modern Villa">
+        <div class="card-content">
+          <h3>Ultra-Modern Smart Villa</h3>
+          <ul class="card-meta">
+            <li>Location: South Delhi – Green Avenue</li>
+            <li><strong>Bedrooms:</strong> 4</li>
+            <li><strong>Bathrooms:</strong> 4</li>
+            <li><strong>Area:</strong> 7,500 sq.ft</li>
+            <li><strong>Highlights:</strong> Smart home system, jacuzzi, private pool</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="house4.jpg" alt="Modern Villa">
+        <div class="card-content">
+          <h3>Luxury High-Rise Apartment</h3>
+          <ul class="card-meta">
+            <li>Location: South Delhi – Green Avenue</li>
+            <li><strong>Bedrooms:</strong> 3</li>
+            <li><strong>Bathrooms:</strong> 2</li>
+            <li><strong>Area:</strong>3,200 sq.ft</li>
+            <li><strong>Highlights:</strong> City view balcony, gym, private parking</li>
+          </ul>
+        </div>
+      </div>
+
     </div>
   </section>
-
 
   <section class="about-preview">
     <div class="preview-text">
@@ -97,7 +124,6 @@
       <a href="about.html" class="btn">Learn More About Us</a>
     </div>
   </section>
-
 
   <section class="services">
     <h2>Our Services</h2>
@@ -117,7 +143,6 @@
     </div>
   </section>
 
-
   <section class="testimonials">
     <h2>Client Testimonials</h2>
     <div class="testi-cards">
@@ -132,10 +157,10 @@
     </div>
   </section>
 
-
-  <footer class="footer">
-    <p>© 2025 Elite Circle Estate. All rights reserved.</p>
-    <p>Contact: +91 98183-12077 | info@royale-realty.com</p>
+  <footer>
+    <p>&copy; 2025 Elite Circle Estate Company. All Rights Reserved.<br>
+    Feel free to contact us in case of any queries:- <br>
+    +91 98765 43210 , +91 91234 56789</p>
   </footer>
 
 </body>
